# Str8ts

./: CMakeLists.txt  Readme.md
Str8ts/: main.cpp
Str8ts.xcodeproj/: project.pbxproj
Str8ts.xcodeproj/xcuserdata/mb.xcuserdatad/xcschemes/: xcschememanagement.plist
problems/: example.txt
src/: LUTs.cpp  LUTs.hpp  SMap.cpp  SMap.hpp  STable.cpp  STable.hpp  Stats.hpp  Str8ts.cpp  Str8ts.hpp  Straight.cpp  Straight.hpp  helpme.cpp  helpme.hpp  prompt.cpp  prompt.hpp  runstats.cpp  runstats.hpp  solver.cpp  verbose.cpp  verbose.hpp
